--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "antd": "^4.19.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
