feat(配置): 别名配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
     "target": "es5",
     "lib": [
       "dom",
@@ -18,7 +19,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "paths": {
+      "@": ["src/*"],
+      "view/*": ["src/view/*"],
+      "components/*": ["src/components/*"],
+      "static/*": ["src/static/*"],
+      "utils/*": ["src/utils/*"],
+    }
   },
   "include": [
     "src"
