feat(首页): 增加公共样式和视频列表界面

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
       "components/*": ["src/components/*"],
       "static/*": ["src/static/*"],
       "utils/*": ["src/utils/*"],
+      "assets/*": ["src/assets/*"],
     }
   },
   "include": [
