--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@react-three/fiber": "^8.0.9",
     "@reduxjs/toolkit": "^1.8.1",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.3",
@@ -14,6 +15,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/three": "^0.139.0",
     "antd": "^4.19.3",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -61,6 +63,7 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
+    "three": "^0.139.2",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
