--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@react-three/drei": "^9.1.3",
     "@react-three/fiber": "^8.0.9",
     "@reduxjs/toolkit": "^1.8.1",
     "@svgr/webpack": "^5.5.0",
