feat(商品): 用redux改造

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
       "static/*": ["src/static/*"],
       "utils/*": ["src/utils/*"],
       "assets/*": ["src/assets/*"],
-      "request/*": ["src/request/*"]
+      "request/*": ["src/request/*"],
+      "app/*": ["src/app/*"]
     }
   },
   "include": [
