--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
   },
   "scripts": {
     "start": "dotenv -e .env.dev node scripts/start.js",
-    "build": "node scripts/build.js",
-    "build-test": "node scripts/build.js",
+    "build": "dotenv -e .env.prod node scripts/build.js",
+    "build-test": "dotenv -e .env.test node scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
