--- a/package.json
+++ b/package.json
@@ -84,7 +84,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "globals": {
+      "__webpack_public_path__": true
+    }
   },
   "browserslist": {
     "production": [
